[tool.poetry]
name = "echidnabot"
version = "0.1.0"
description = ""
authors = ["lilah"]

[tool.poetry.dependencies]
python = "^3.7"
"discord.py" = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
start = "echidnabot.main:init"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

